# wolff

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  LICENSE  README
doc/: compile.rst  conf.py  examples.rst  finite_states.rst  graph.rst  index.rst  introduction.rst  measurement.rst  models.rst  system.rst  types.rst
examples/: CMakeLists.txt  On.cpp  On_hierarchical.cpp  animate_ising.cpp  clock.cpp  continuous_gaussian.cpp  coulomb_gas.cpp  discrete_gaussian.cpp  export_measurement.hpp  ising.cpp  ising_animation.cpp  ising_boundary.cpp  ising_no_field.cpp  ising_random_field.cpp  ising_standalone.cpp  overview_measurement.hpp  potts.cpp  progress_measurement.hpp  render2d_measurement.hpp  rendering.hpp  simple_ising.cpp  simple_measurement.hpp
examples/include/: colors.h  correlation.hpp  measure.hpp
examples/src/: CMakeLists.txt
examples/src/models/: CMakeLists.txt
examples/src/models/On/: CMakeLists.txt  orthogonal.hpp  vector.hpp  wolff_On.cpp
examples/src/models/ising/: CMakeLists.txt  ising.hpp  wolff_ising.cpp  wolff_random-field_ising.cpp  z2.hpp
examples/src/models/potts/: CMakeLists.txt  dihedral.hpp  potts.hpp  symmetric.hpp  wolff_clock.cpp  wolff_potts.cpp
examples/src/models/roughening/: CMakeLists.txt  dihedral_inf.hpp  height.hpp  wolff_cgm.cpp  wolff_dgm.cpp
examples/src/tools/: CMakeLists.txt  analyze_correlations.cpp
lib/: CMakeLists.txt  angle.h  circle_group.h  cluster.c  cluster.h  cluster_finite.c  cluster_finite.h  colors.h  convex.c  convex.h  correlation.h  dihedral.c  dihedral.h  dihedral_inf.h  dihinf.c  dihinf.h  finite_states.h  graph.c  graph.cpp  graph.h  height.h  initial_finite.c  initial_finite.h  ising.h  measure.h  measurement.c  measurement.h  orthogonal.c  orthogonal.h  potts.h  queue.c  queue.h  rand.c  rand.h  stack.c  stack.h  state.h  symmetric.c  symmetric.h  torus.h  (+11 more)
lib/include/: wolff.hpp
lib/include/wolff/: cluster.hpp  finite_states.hpp  graph.hpp  meas.h  measurement.hpp  state.hpp  system.hpp  types.h
lib/include/wolff/models/: dihedral.hpp  dihedral_inf.hpp  height.hpp  ising.hpp  orthogonal.hpp  potts.hpp  symmetric.hpp  vector.hpp
lib/src/: graph.cpp
lib/wolff_graphs/: hierarchical.hpp
lib/wolff_models/: dihedral.hpp  dihedral_inf.hpp  height.hpp  ising.hpp  orthogonal.hpp  potts.hpp  symmetric.hpp  vector.hpp
plotting/: plot2d.ipynb  plot_hierarchical.ipynb
src/: analyze_correlations.cpp  pt_wolff.c  wolff.c  wolff.cpp  wolff.h  wolff_O2.cpp  wolff_On.cpp  wolff_cgm.cpp  wolff_clock.cpp  wolff_dgm.c  wolff_dgm.cpp  wolff_finite.c  wolff_heisenberg.cpp  wolff_ising.cpp  wolff_planar.cpp  wolff_potts.c  wolff_potts.cpp  wolff_vector.c
wolfram_link/: Makefile  convexminorant.tm
